# RelayTerm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.backend  Dockerfile.web  SPEC.md  package.json  pnpm-lock.yaml
.claude/: .agentic-init-cache.json  settings.json
.claude/skills/axum-tasks/: SKILL.md
.claude/skills/russh-tasks/: SKILL.md
.claude/skills/sqlx-tasks/: SKILL.md
.claude/skills/svelte-tasks/: SKILL.md
.claude/skills/tailwindcss-tasks/: SKILL.md
.claude/skills/tauri-tasks/: SKILL.md
.claude/skills/tokio-tasks/: SKILL.md
.claude/skills/vite-tasks/: SKILL.md
.claude/skills/xterm-tasks/: SKILL.md
.forgejo/actions/apt-tauri-linux/: action.yml
.forgejo/actions/dind-docker-host/: action.yml
.forgejo/actions/docs-contracts/: action.yml
.forgejo/actions/setup-node-pnpm/: action.yml
.forgejo/actions/setup-rust/: action.yml
.forgejo/workflows/: android.yml  ci.yml  desktop-linux.yml  test-runner.yml
apps/backend/: Cargo.toml
apps/backend/migrations/: 20260428000001_users.sql  20260428000002_hosts.sql  20260428000003_ssh_identities.sql  20260428000004_server_profiles.sql  20260428000005_known_host_entries.sql  20260428000006_terminal_sessions.sql  20260428000007_terminal_session_attachments.sql  20260428000008_session_events.sql  20260428000009_audit_events.sql  20260429000010_terminal_session_starting_status.sql  20260501000011_server_profiles_disabled_at.sql  20260501000012_audit_events_lifecycle_kinds.sql  20260501000013_user_passwords.sql  20260501000014_user_sessions.sql  20260501000015_audit_events_first_user_created_kind.sql  20260502000016_audit_events_session_revoked_kinds.sql  20260502000017_audit_events_password_changed_kind.sql  20260502000018_terminal_recording_chunks.sql  20260502000019_terminal_recording_markers.sql  20260503000020_terminal_recording_markers_closed_uq.sql  20260503000021_audit_events_recording_purged_kind.sql  20260510000022_known_host_entries_revoke_metadata.sql
apps/backend/src/: config.rs  main.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/: package.json
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/src/: main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: SMOKE.md
apps/web/src/: App.svelte  app.css  main.ts
apps/web/tests/: activeSessionStore.test.ts  appShellIsolation.test.ts  auditApi.test.ts  authApi.test.ts  authCheckApi.test.ts  authSessionsApi.test.ts  backendConfig.test.ts  backendHandoff.test.ts  backendUrlError.test.ts  changePasswordApi.test.ts  createApi.test.ts  dashboardSummary.test.ts  health.test.ts  hostKeyApi.test.ts  hostKeyPanelReplace.test.ts  inventoryApi.test.ts  inventoryDetails.test.ts  inventoryFilters.test.ts  inventoryMutationsApi.test.ts  labLog.test.ts  liveTerminalState.test.ts  (+19 more)
crates/relayterm-api/: Cargo.toml
crates/relayterm-api/src/: dev_user.rs  error.rs  lib.rs
crates/relayterm-api/src/auth/: cookie.rs  csrf.rs  mod.rs  user.rs
crates/relayterm-api/src/dto/: audit_event.rs  auth.rs  auth_check.rs  host.rs  mod.rs  preflight.rs  server_profile.rs  session_policy.rs  ssh_identity.rs  terminal_recording.rs  terminal_session.rs
crates/relayterm-api/src/routes/: health.rs  mod.rs  ws.rs
crates/relayterm-api/src/routes/v1/: audit_events.rs  auth.rs  hosts.rs  mod.rs  server_profiles.rs  session_policy.rs  ssh_identities.rs  terminal_recordings.rs  terminal_sessions.rs
crates/relayterm-api/tests/: api.rs
crates/relayterm-auth/: Cargo.toml
crates/relayterm-auth/src/: lib.rs  password.rs  service.rs  session_token.rs  throttle.rs
crates/relayterm-core/: Cargo.toml
crates/relayterm-db/: Cargo.toml  README.md
crates/relayterm-db/src/: error.rs  lib.rs  rows.rs
crates/relayterm-db/src/repositories/: audit_event.rs  host.rs  known_host_entry.rs  mod.rs  password_credential.rs  retention_advisory_lock.rs  server_profile.rs  session_event.rs  ssh_identity.rs  terminal_recording.rs  terminal_session.rs  user.rs  user_session.rs
crates/relayterm-db/tests/: repositories.rs
crates/relayterm-observability/: Cargo.toml
crates/relayterm-protocol/: Cargo.toml
crates/relayterm-protocol/src/: binary.rs  lib.rs
crates/relayterm-ssh/: Cargo.toml
crates/relayterm-ssh/src/: auth_check.rs  lib.rs  preflight.rs  pty.rs  russh_auth.rs  russh_probe.rs  russh_pty.rs
crates/relayterm-terminal/: Cargo.toml
crates/relayterm-terminal-vt/: Cargo.toml
crates/relayterm-terminal/src/: lib.rs  manager.rs  recording.rs  replay.rs  retention.rs  retention_worker.rs
crates/relayterm-terminal/tests/: manager.rs  recording_writer.rs
crates/relayterm-vault/: Cargo.toml
crates/relayterm-vault/src/: cipher.rs  identity.rs  lib.rs  master_key.rs
deploy/: docker-compose.example.yml  docker-compose.images.example.yml  docker-compose.production.example.yml  docker-compose.traefik-staging.example.yml  docker-compose.yml  relayterm.env.example
deploy/nginx/: web.conf.template
docs/: auth-smoke.md  ghostty-web-wasm-csp.md  persistent-sessions.md  private-key-import.md  production-auth.md  renderer-comparison-scorecard.md  renderer-neutral-autofit.md  renderer-smoke-harness.md  session-quotas.md  terminal-recording.md  terminal-renderer-evaluation.md  v1-production-readiness.md  v1-release-checklist.md  v1-release-notes.md  wterm-mobile-smoke-plan.md
docs/agent/: context-split-map.md  encountered-lessons.md  redaction-rules.md  task-patterns.md
docs/config-examples/: relayterm.dev.example.toml  relayterm.production.example.toml
docs/deployment/: backup-restore-rehearsal-record.md  backup-restore-runbook.md  docker-compose.md  first-production-deploy-plan.md  production-runbook.md  tauri-ci-release-plan.md  tauri-local-build.md  v1-production-smoke.md  vps-staging-smoke.md
docs/spec/: README.md  auth-implementation-history.md  auth.md  host-key-replace.md  inventory.md  recording.md  tauri-runtime-backend-url.md  terminal-adapters.md  terminal.md  web-shell.md
scripts/: check-doc-contracts.sh
(+82 files in other folders)
