[package]
name = "relayterm-backend"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "relayterm-backend"
path = "src/main.rs"

[dependencies]
relayterm-api = { workspace = true }
relayterm-auth = { workspace = true }
relayterm-core = { workspace = true }
relayterm-db = { workspace = true }
relayterm-observability = { workspace = true }
relayterm-ssh = { workspace = true }
relayterm-terminal = { workspace = true }
relayterm-vault = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }

[lints]
workspace = true
