[package]
name = "relayterm-api"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
relayterm-core = { workspace = true }
relayterm-db = { workspace = true }
relayterm-protocol = { workspace = true }
relayterm-vault = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[features]
# Integration tests under `tests/` require a live Postgres reachable via
# `DATABASE_URL`. Off by default so `cargo test --workspace` stays runnable
# without infra. Enable with `cargo test -p relayterm-api --features postgres-tests`.
postgres-tests = []

[dev-dependencies]
relayterm-db = { workspace = true }
relayterm-vault = { workspace = true }
http-body-util = "0.1"
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }

[lints]
workspace = true
