[package]
name = "relayterm-api"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
relayterm-core = { workspace = true }
relayterm-auth = { workspace = true }
relayterm-db = { workspace = true }
relayterm-protocol = { workspace = true }
relayterm-ssh = { workspace = true }
relayterm-terminal = { workspace = true }
relayterm-vault = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[features]
# Integration tests under `tests/` require a live Postgres reachable via
# `DATABASE_URL`. Off by default so `cargo test --workspace` stays runnable
# without infra. Enable with `cargo test -p relayterm-api --features postgres-tests`.
postgres-tests = []

[dev-dependencies]
relayterm-auth = { workspace = true }
relayterm-db = { workspace = true }
relayterm-protocol = { workspace = true }
relayterm-ssh = { workspace = true }
relayterm-terminal = { workspace = true }
relayterm-vault = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http-body-util = "0.1"
serde_json = { workspace = true }
sqlx = { workspace = true }
# Used by the SSH-identity import integration tests to mint a fresh
# Ed25519 OpenSSH PEM at test time. Same workspace pin as the
# production vault crate; only the alloc + ed25519 features are needed
# (we never construct or decrypt encrypted keys in tests).
ssh-key = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
# WebSocket client for end-to-end lifecycle tests against an in-process
# axum::serve. Pinned to the same minor as the `tungstenite` axum 0.8
# already pulls in transitively (^0.29) so the lockfile keeps a single
# copy of the protocol crate.
tokio-tungstenite = "0.29"
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }

[lints]
workspace = true
