[package]
name = "relayterm-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
relayterm-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
# Integration tests under `tests/` require a live Postgres reachable via
# `DATABASE_URL`. Off by default so `cargo test --workspace` stays runnable
# without infra. Enable with `cargo test -p relayterm-db --features postgres-tests`.
postgres-tests = []

[dev-dependencies]
relayterm-terminal = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }

[lints]
workspace = true
