[package]
name = "relayterm-protocol"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
relayterm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
