[package]
name = "relayterm-terminal"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
relayterm-core = { workspace = true }
relayterm-protocol = { workspace = true }
relayterm-ssh = { workspace = true }
relayterm-terminal-vt = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
