[package]
name = "relayterm-terminal"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
relayterm-core = { workspace = true }
relayterm-protocol = { workspace = true }
relayterm-ssh = { workspace = true }
relayterm-terminal-vt = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
relayterm-ssh = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
uuid = { workspace = true }

[lints]
workspace = true
