[package]
name = "relayterm-vault"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
relayterm-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
ssh-key = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }

[lints]
workspace = true
